test/io/readline/readStridedArr.good
readStridedArr.chpl:6: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
readStridedArr.chpl:8: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
readStridedArr.chpl:12: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
readStridedArr.chpl:12: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
readStridedArr.chpl:17: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
readStridedArr.chpl:19: error: 'readline()' is currently only supported for non-strided 1D rectangular arrays
